--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>Akamai WAF Release Notes - Published by Robert Drouin January 20, 2021</b>
+<b>Akamai WAF Release Notes - Published by Robert Drouin May 05, 2022</b>
 <br><br>
+<b>Version 1.1.0 - Released May 05, 2022</b>
+<ul>
+<li>Added a new action 'list siteshields' [PAPP-25475]</li>
+</ul>
 <b>Version 1.0.0 - Released January 20, 2021</b>
 <ul>
 <li>Initial Release</li>
